<resources>
    <string name="app_name">ArtistSearch</string>
    <string name="menu_search">Search</string>
    <string name="menu_star">Star</string>
    <string name="credit_artsy">Powered by Artsy</string>
    <string name="tab_details">DETAILS</string>
    <string name="tab_artwork">ARTWORK</string>
    <string name="label_name">Name</string>
    <string name="label_nationality">Nationality</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_deathday">Deathday</string>
    <string name="label_biography">Biography</string>
    <string name="label_category">Category</string>
    <string name="label_description">Description</string>
    <string name="label_favorites">FAVORITES</string>
</resources>